EncoderApplication info endpoint